# terra-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
src/terra-mcp/: server.py
src/terramcp/: __init__.py  server.py
